--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-DATABASE_URI: <your-mongodb-uri>
-APP_ID: <your-app-id>
-MASTER_KEY: <your-master-key>
+DATABASE_URI = <your-mongodb-uri>
+APP_ID = <your-app-id>
+MASTER_KEY = <your-master-key>
+DB_USER_NAME = <your-mongodb-username>
+DB_PASSWORD = <your-mongodb-password>
