--- a/parse-dashboard-config.json
+++ b/parse-dashboard-config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "serverURL": "http://localhost:1337/parse",
+      "serverURL": "https://todo-parse-server.herokuapp.com/parse",
       "appId": "app",
       "masterKey": "master",
       "appName": "todo"
