server url to config

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ APP_ID = <your-app-id>
 MASTER_KEY = <your-master-key>
 DB_USER_NAME = <your-mongodb-username>
 DB_PASSWORD = <your-mongodb-password>
+SERVER_URL = <your-server-uri>
